--- a/requirements.txt
+++ b/requirements.txt
@@ -23,21 +23,6 @@ matplotlib==3.10.7
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
-nvidia-cublas-cu12==12.4.2.65
-nvidia-cuda-cupti-cu12==12.4.99
-nvidia-cuda-nvrtc-cu12==12.4.99
-nvidia-cuda-runtime-cu12==12.4.99
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.0.44
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.5.119
-nvidia-cusolver-cu12==11.6.0.99
-nvidia-cusparse-cu12==12.3.0.142
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.20.5
-nvidia-nvjitlink-cu12==12.4.99
-nvidia-nvshmem-cu12==3.3.20
-nvidia-nvtx-cu12==12.4.99
 packaging==25.0
 pandas==2.3.3
 pfzy==0.3.4
@@ -56,8 +41,8 @@ six==1.17.0
 sniffio==1.3.1
 sympy==1.14.0
 tokenizers==0.22.1
-torch==2.4.0+cu124
-torchvision==0.19.0+cu124
+torch==2.4.0
+torchvision==0.19.0
 tqdm==4.67.1
 transformers==4.57.1
 triton==3.0.0
